tests/NormalTests/paczka1/fuzzy1/64325166.err
Error in line 6: S757 S757 81,45
Error in line 4: ELQqJ A975 36,2
Error in line 19: vvzeoIRVDHS S270 86,0
Error in line 29: 5BZYnh S270 19,91
Error in line 25: 5BZYnh S270 14,6
